--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="assets/bootstrap/js/bootstrap.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
+
+    <!--Bootstrap ON-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Bootstrap OFF-->
     <meta name="full-screen" content="yes">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -31,7 +32,8 @@
     <meta name="msapplication-TileImage" content="assets/pics/favicon_package_v0.16mstile-144x144.png">
     <meta name="theme-color" content="#1b1b1b">
     <!--Fin Gestion des icones de l'application-->
-
+<meta name="author" content="Dzénetan Massart">
+<meta name="keywords" content="HTML,CSS,Javascript,WordPress,documentation,générateur,bootstrap">
     <!--Début gestion de l'embed pour Discord-->
     <meta content="Tricks and Tips" property="og:title" />
     <meta content="Répertoire de trucs et astuces à usage des devellopeurs web !" property="og:description" />
@@ -47,7 +49,7 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
     </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -59,7 +61,7 @@
                         <a id="HTML" class="nav-link" href="T_T.html#HTML" title="Afficher la documentation autour de HTML">HTML</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Afficher les options esthétiques: CSS,Bootstrap et WordPress">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Afficher les options esthétiques: CSS,Bootstrap et WordPress">
                             Esthétique
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -70,7 +72,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Afficher les options esthétiques: Javascript,React et PHP">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Afficher les options esthétiques: Javascript,React et PHP">
                             Programmation
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -115,95 +117,8 @@
             <p>Créé par <a href="https://dzenetanmassart.github.io/" target="_blank">Dzénetan Massart<sup><i class="fas fa-external-link-alt"></i></sup></a> le 17 Février 2019 à <a href="https://becode.org/fr/" target="_blank">la formation BeCode<sup><i class="fas fa-external-link-alt"></i></sup></a>.
                 <b>Tricks & Tips</b> sert à répertorier les applications et documentations autour du développement web.</p>
         </section>
-        <section class="presentation">
-            <h2>Fonctionnement</h2>
-            <p>
-                La barre de navigation se trouvant au-dessus de la page sert à charger les différentes cartes de la base de donnée selon les filtres indiqués.
-            </p>
-            <p>
-                Chaque carte mentionne :
-                <div class="separation">
-                    <ul>
-                        <li>Le titre de l'application / documentation</li>
-                        <li>La description de l'application / documentation</li>
-                    </ul>
-                    <ul>
-                        <li>Le badge spécifiant la technologie mise en avant pas l'application / documentation</li>
-                        <li>Le logo de l'application / documentation</li>
-                        <li>Si l'application est un générateur</li>
-                    </ul>
-                </div>
-            </p>
-        </section>
-        <section class="presentation">
-            <h2>Selection du jour</h2>
-            <p> Aujourd'hui, ces 3 cartes ont été piochées dans la base de donnée.</p>
-            <div class="index_selection" id="generate"></div>
-        </section>
 
     </main>
-    <footer>
-
-    </footer>
-    <script src="assets/js/cartes.js"></script>
-
-    <script>
-        const d = new Date();
-a = d.getDate();
-        let generate = " ";
-        let tab_select = [1, 3, 10];
-        for (let ii = 0; ii < tritip.length; ii++) {
-
-            let tt = (tritip[ii]);
-            if (tab_select[0]+a === ii ||
-                tab_select[1]+a === ii ||
-                tab_select[2]+a === ii) {
-                generate += '<a href="' + tt.link + '" target="_blank" ><div class="row ensemble"><div class="col-12"><div class="row"><div class="col-8 part_un"> <h3 class="text-center">' +
-                    tt.title + '</h3> <p>' + tt.desc + '</p></div><div class="col-md-4 part_deux ' + tt.badge + '">';
-                generate += '<h4 class="badge ';
-
-                if (tt.badge === "Javascript") {
-                    generate += ' Javascript';
-                } else if (tt.badge === "CSS") {
-                    generate += ' CSS';
-                } else if (tt.badge === "HTML") {
-                    generate += ' HTML';
-                } else if (tt.badge === "Bootstrap") {
-                    generate += ' Bootstrap';
-                } else if (tt.badge === "WordPress") {
-                    generate += ' WordPress';
-                } else if (tt.badge === "React") {
-                    generate += ' React';
-                } else if (tt.badge === "PHP") {
-                    generate += ' PHP';
-                } else {
-                    generate += '';
-                }
-
-                generate += '">' +
-                    tt.badge +
-                    '</h4>';
-                if (tt.generateur === 1) {
-                    generate += '<span class="generateur">Generateur</span>';
-                }
-                if (tt.img_link != "nope") {
-                    generate += '<img src="' +
-                        tt.img_link +
-                        '" title="' +
-                        tt.title +
-                        '" alt="' +
-                        tt.title +
-                        '" >';
-                } else {}
-
-                generate += '</div></div></div></div></a>';
-            }
-        }
-
-
-
-        document.getElementById("generate").innerHTML = generate;
-    </script>
 
 
 
