Amélioration du dynamisme du rendu

--- a/index.html
+++ b/index.html
@@ -114,10 +114,19 @@
         <h1>Tricks and Tips</h1>
         <section class="presentation">
             <h2>Présentation</h2>
-            <p>Créé par <a href="https://dzenetanmassart.github.io/" target="_blank">Dzénetan Massart<sup><i class="fas fa-external-link-alt"></i></sup></a> le 17 Février 2019 à <a href="https://becode.org/fr/" target="_blank">la formation BeCode<sup><i class="fas fa-external-link-alt"></i></sup></a>.
+            <p>Créé par <a href="https://dzenetanmassart.github.io/" target="_blank" title="Le site de Dzénetan Massart">Dzénetan Massart<sup><i class="fas fa-external-link-alt"></i></sup></a> le 17 Février 2019 à <a href="https://becode.org/fr/" title="Le site de BeCode" target="_blank">la formation BeCode<sup><i class="fas fa-external-link-alt"></i></sup></a>.
                 <b>Tricks & Tips</b> sert à répertorier les applications et documentations autour du développement web.</p>
         </section>
-
+<section class="presentation">
+    <h2>Histoire de Tricks&Tips</h2>
+    <p>Au début, le répertoire était surtout un projet de génération de liste en Javascript mais il a été réussi assez rapidemment. La seule chose qui n'a jamais convenu est le visuel.</p>
+<p>Sous base du schéma ci-dessous, Tricks and Tips (ou "T_T" ou "T&T") aura toujours évolué visuellement pour obtenir cette structure.</p>
+<img src="assets\pics\visuTricksAndTipsBase.png" style="max-height:500px" class="mx-auto d-block shadow-sm p-4 mb-4 bg-white img-fluid" alt="Le visuel prévu de Tricks and Tips">
+<p>Bien sur, l'emplois du <kbd>flex</kbd> et de ses composants fût le premier réflexe mais tout ce qui était gestion du <kbd>CSS</kbd> pour les badges colorés, la position de la mention "générateur" et le lien en tout petit fût une épreuve constante. On a eût pas moins de 4 designs différents depuis 2019 jusqu'à aujourd'hui.</p>
+<p>Mais le visuel n'est pas tout seul à avoir évolué. La structure est passé d'une dizaine de page (une page par catégorie) à  <a href="T_T.html" target="_blank" title="Vers Tricks and Tips">une page dynamique</a> ayant donc un système de filtre faisant appel à 2 fichiers Javascript (pour lister et générer).</p>
+<p>Le projet "Tricks&Tips" est géré simultanément avec son équivalent ayant comme focus les logiciels en ligne : <a href="https://dzenetanmassart.github.io/MakeOnWeb/" target="_blank" title="Vers le site MakeOnWebsoft">MakeOnWebsoft</a></p>
+<p>Dans le futur, le site web devrait être accessible sur un site web reprenant toute la production de <a href="https://dzenetanmassart.github.io/" target="_blank" title="Le site de Dzénetan Massart">Dzénetan Massart</a> afin de constituer un book de compétence.</p>
+</section>
     </main>
 
 
