Mise à jour d'Avril 2023

--- a/T_T.html
+++ b/T_T.html
@@ -105,11 +105,11 @@
             </form>
         </nav>
     </header>
-    <main class="scrollbar">
+    <main>
         <section id="generate">
 
 
-            </div>
+            
         </section>
     </main>
 
